Fixes weird gallery image alignment

--- a/src/site/style.css
+++ b/src/site/style.css
@@ -124,7 +124,7 @@ figure {
 }
 
 .gallery {
-    align-items: baseline;
+    align-items: flex-start;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
